--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -18,6 +18,6 @@
     <button mat-flat-button color="accent" class="btn">Accent</button>
     <button mat-flat-button color="warn">Warn</button>
     <button mat-flat-button disabled>Disabled</button>
-    <a mat-flat-button href="https://www.google.com/" target="_blank">Link</a>
+    <a mat-flat-button href="https://www.google.com/" target="_blank" rel="noreferrer">Link</a>
   </div>
 </aw-page-base>
