--- a/src/styles/material/_light-theme.scss
+++ b/src/styles/material/_light-theme.scss
@@ -1,11 +1,11 @@
 @use "@angular/material" as mat;
 @use "./typography/config" as config;
 
-$light-primary: mat.define-palette(mat.$blue-palette, 700, A100, A400);
-$light-accent: mat.define-palette(mat.$teal-palette, 500);
-$light-warn: mat.define-palette(mat.$red-palette);
+$light-primary: mat.m2-define-palette(mat.$m2-blue-palette, 700, A100, A400);
+$light-accent: mat.m2-define-palette(mat.$m2-teal-palette, 500);
+$light-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
-$light-theme: mat.define-light-theme(
+$light-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $light-primary,
