--- a/src/styles/material/typography/_config.scss
+++ b/src/styles/material/typography/_config.scss
@@ -3,66 +3,66 @@
 $heading-font-family: "'Roboto', sans-serif";
 $regular-font-family: "'Roboto', sans-serif";
 
-$my-app-typography: mat.define-typography-config(
+$my-app-typography: mat.m2-define-typography-config(
   $font-family: $regular-font-family,
   $headline-1:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 112px
     ),
   $headline-2:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 56px
     ),
   $headline-3:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 45px,
       $line-height: 48px
     ),
   $headline-4:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 34px,
       $line-height: 40px
     ),
   $headline-5:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 24px,
       $line-height: 32px
     ),
   $headline-6:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 20px,
       $line-height: 32px
     ),
   $subtitle-1:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 18px,
       $line-height: 28px
     ),
   $subtitle-2:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-family: $heading-font-family,
       $font-size: 18px,
       $line-height: 24px
     ),
   $body-2:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-size: 16px,
       $line-height: 24px
     ),
   $body-1:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-size: 16px,
       $line-height: 24px
     ),
   $button:
-    mat.define-typography-level(
+    mat.m2-define-typography-level(
       $font-size: 16px,
       $line-height: 24px
     )
