Fix size al ser un signal se remplaza por size()

--- a/src/app/components/dual-list-box/dual-list-box.component.html
+++ b/src/app/components/dual-list-box/dual-list-box.component.html
@@ -19,7 +19,7 @@
           class="box-list-select"
           [(ngModel)]="itemsLeftSelected"
           [id]="boxLeftId"
-          [size]="size"
+          [size]="size()"
           aria-label="Items unselected"
           multiple>
           @for (item of dualListBoxItemsLeft; track item) {
@@ -55,7 +55,7 @@
           class="box-list-select"
           [(ngModel)]="itemsRightSelected"
           [id]="boxRightId"
-          [size]="size"
+          [size]="size()"
           aria-label="Items selected"
           multiple>
           @for (item of dualListBoxItemsRight; track item) {
