--- a/src/app/components/forms/inputs/form-color-picker/form-color-picker.component.html
+++ b/src/app/components/forms/inputs/form-color-picker/form-color-picker.component.html
@@ -9,7 +9,7 @@
       [id]="id()"
       [name]="id()"
       [value]="value"
-      [attr.data-format]="dataFormat"
+      [attr.data-format]="dataFormat()"
       [readonly]="readonly()"
       data-function="color-picker"
       class="btn-appearance" />
